# cdk

./: Cargo.toml  flake.nix  rust-toolchain.toml
crates/cdk/: Cargo.toml
crates/cdk-axum/: Cargo.toml
crates/cdk-axum/src/: lib.rs  router_handlers.rs
crates/cdk-cli/: Cargo.toml
crates/cdk-cli/src/sub_commands/: create_request.rs  receive.rs  send.rs
crates/cdk-common/: Cargo.toml
crates/cdk-common/src/: common.rs  error.rs
crates/cdk-common/src/database/: mint.rs
crates/cdk-integration-tests/: Cargo.toml
crates/cdk-integration-tests/src/: init_pure_tests.rs  init_regtest.rs
crates/cdk-integration-tests/tests/: mint.rs  regtest.rs
crates/cdk-mintd/: Cargo.toml
crates/cdk-mintd/src/: main.rs
crates/cdk-redb/: Cargo.toml
crates/cdk-redb/src/mint/: mod.rs  mssmt.rs
crates/cdk-sqlite/: Cargo.toml
crates/cdk-sqlite/src/: lib.rs  mssmt.rs
crates/cdk-sqlite/src/mint/: mod.rs
crates/cdk/examples/: p2pk.rs
crates/cdk/src/: lib.rs
misc/: itests.sh
spending_conditions/: Scarb.toml  bootloader-proof-with-output.json  bootloader-proof.json  send.txt  stwo-proof.json
spending_conditions/cairo-pie-with-output/: additional_data.json  execution_resources.json  metadata.json
spending_conditions/cashu-nonce-signer/: Cargo.toml
spending_conditions/cashu-nonce-signer/src/: main.rs
spending_conditions/config_and_params/: bootloader_cpu_air_params.json  cairo_layout_params_file.json  cpu_air_params.json  dynamic_params.json
spending_conditions/scripts/: flow.sh  flow_dynamic.sh
spending_conditions/src/: bip340.cairo  lib.cairo
(+18 files in other folders)
