[package]
name = "cashu-nonce-signer"
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cdk = { version = "0.5.0", path = "../../crates/cdk" }
clap = "4.0.32"
starknet-signers = "0.10.1"
starknet-crypto= "0.7.4"
starknet-types-core="0.1.7"
